--- a/https:/github.com/MarreMalmgren/Tavla.git/Tavel/WebContent/indextavel.html
+++ b/https:/github.com/MarreMalmgren/Tavla.git/Tavel/WebContent/indextavel.html
@@ -1,19 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
-<meta charset="UTF-8">
-<title>Jennys tavlor</title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	crossorigin="anonymous">
 
+<!-- Optional theme -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+	integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+	crossorigin="anonymous">
+
+
+
+
+<meta charset="ISO-8859-1">
+<title>Log in page</title>
 </head>
 <body>
+<div class="row col-lg-6 col-md-4 col-xs-4">
+<h1>Admin login</h1>
+<p>Detta är sidan för Jenny att gå in på för att redigera sidan om du har råkat trycka in dig här och inte är Jenny så trycker på denna knappen </p>
+<button> <a href="indextavel.html">Tillbaka till startsidan</button>
 
-<ul>
-	<li><a class="active" href="#hem">Hem</a></li>
-	<li><a href="#kt">Köp tavlor</a></li>
-	<li><a href="#oj">Om Jenny</a></li>
-	
-</ul>
-<div></div>
+
+
+<div class="container col-lg-6 col-md-4 col-xs-4 ">
+<div class="form-group">
+  <label for="usr">Name:</label>
+  <input type="text" class="form-control" id="usr">
+</div>
+<div class="form-group">
+  <label for="pwd">Password:</label>
+  <input type="password" class="form-control" id="pwd">
+</div>
+<button id="login">Login</button>
+</div>
+</div>
+
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
 </body>
 </html>
